--- a/web/index.html
+++ b/web/index.html
@@ -1,154 +1,181 @@
 <!DOCTYPE html>
-<!--###############################################################################
-##
-##  Copyright (C) 2014, Tavendo GmbH and/or collaborators. All rights reserved.
-## 
-##  Redistribution and use in source and binary forms, with or without
-##  modification, are permitted provided that the following conditions are met:
-## 
-##  1. Redistributions of source code must retain the above copyright notice,
-##     this list of conditions and the following disclaimer.
-## 
-##  2. Redistributions in binary form must reproduce the above copyright notice,
-##     this list of conditions and the following disclaimer in the documentation
-##     and/or other materials provided with the distribution.
-## 
-##  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-##  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-##  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-##  ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
-##  LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-##  CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-##  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-##  INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
-##  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-##  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-##  POSSIBILITY OF SUCH DAMAGE.
-##
-###############################################################################
--->
-
 <html>
+   <head>
+      <style>
+         body {
+            font-family: sans-serif;
+         }
+         .btn_led_on {
+            background-color: #0f0;
+         }
+         .btn_led_off {
+            background-color: #aaa;
+         }
+         .btn_button_pressed {
+            background-color: #00f;
+            padding: 4px;
+         }
+         .btn_button_unpressed {
+            background-color: #aaa;
+            padding: 4px;
+         }
+      </style>
+   </head>
    <body>
-      <h1>Hello WAMP</h1>
+      <h1>RaspberryPi - GPIO-2-WAMP Bridge</h1>
       <p>Open JavaScript console to watch output.</p>
-      <script>AUTOBAHN_DEBUG = true;</script>
+
+      <div id="leds"></div><br>
+      <div id="btns"></div>
+
+      <script>AUTOBAHN_DEBUG = false;</script>
       <script src="http://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
 
       <script>
-         // the URL of the WAMP Router (Crossbar.io)
-         //
-         var wsuri;
+         // adjust these settings to fit your setup:
+         
+
+	var wsuri;
          if (document.location.origin == "file://") {
             wsuri = "ws://127.0.0.1:8000/ws";
-
          } else {
             wsuri = (document.location.protocol === "http:" ? "ws:" : "wss:") + "//" +
                         document.location.host + "/ws";
          }
 
+         var realm = "realm1";
+         var device = "846584c1"; // on the Pi: cat /proc/cpuinfo | grep Serial
 
-         // the WAMP connection to the Router
-         //
-         var connection = new autobahn.Connection({
-            url: wsuri,
-            realm: "realm1"
-         });
+         var connection = new autobahn.Connection({url: wsuri, realm: realm});
 
-
-         // timers
-         //
-         var t1, t2;
-
-
-         // fired when connection is established and session attached
-         //
          connection.onopen = function (session, details) {
 
             console.log("Connected");
 
-            // SUBSCRIBE to a topic and receive events
-            //
-            function on_counter (args) {
-               var counter = args[0];
-               console.log("on_counter() event received with counter " + counter);
-            }
-            session.subscribe('com.example.oncounter', on_counter).then(
-               function (sub) {
-                  console.log('subscribed to topic');
-               },
-               function (err) {
-                  console.log('failed to subscribe to topic', err);
-               }
-            );
+            var ledButtonNodes = [];
+            var ledsNode = document.getElementById("leds");
+            ledsNode.innerHTML = '';
 
-
-            // PUBLISH an event every second
-            //
-            t1 = setInterval(function () {
-
-               session.publish('com.example.onhello', ['Hello from JavaScript (browser)']);
-               console.log("published to topic 'com.example.onhello'");
-            }, 1000);
-
-
-            // REGISTER a procedure for remote calling
-            //
-            function mul2 (args) {
-               var x = args[0];
-               var y = args[1];
-               console.log("mul2() called with " + x + " and " + y);
-               return x * y;
-            }
-            session.register('com.example.mul2', mul2).then(
-               function (reg) {
-                  console.log('procedure registered');
-               },
-               function (err) {
-                  console.log('failed to register procedure', err);
-               }
-            );
-
-
-            // CALL a remote procedure every second
-            //
-            var x = 0;
-
-            t2 = setInterval(function () {
-
-               session.call('com.example.add2', [x, 18]).then(
-                  function (res) {
-                     console.log("add2() result:", res);
-                  },
-                  function (err) {
-                     console.log("add2() error:", err);
+            function on_led_change (args, kwargs) {
+               if (ledButtonNodes[kwargs.led]) {
+                  if (kwargs.status) {
+                     ledButtonNodes[kwargs.led].className = "btn_led_on";
+                  } else {
+                     ledButtonNodes[kwargs.led].className = "btn_led_off";
                   }
-               );
+               }
+            }
 
-               x += 3;
-            }, 1000);
+            session.subscribe("io.crossbar.examples.iot.devices.pi." + device + ".gpio.on_digout_changed", on_led_change).then(
+               function () {
+                  console.log("ok, subcribed to event 'on_digout_changed'")
+               },
+               function (e) {
+                  console.log(e);
+               }
+            );
+
+            function create_led_button (led, status) {
+
+               function onclick() {
+                  console.log("LED button " + led + " clicked");
+
+                  session.call("io.crossbar.examples.iot.devices.pi." + device + ".gpio.toggle_digout", [led]).then(
+                     function (res) {
+                        if (res) {
+                           console.log("ok, turned on LED " + led);
+                        } else {
+                           console.log("ok, turned off LED " + led);
+                        }
+                     },
+                     function (e) {
+                        console.log("could not toggle LED " + led, e);
+                     }
+                  );
+               }
+
+               var button = document.createElement("input");
+               button.type = "button";
+               button.value = "Toggle LED " + led;
+               if (status) {
+                  button.className = "btn_led_on";
+               } else {
+                  button.className = "btn_led_off";
+               }
+               button.onclick = onclick;
+               ledsNode.appendChild(button);
+               ledButtonNodes.push(button);
+            }
+
+            session.call("io.crossbar.examples.iot.devices.pi." + device + ".gpio.get_digout").then(
+               function (leds) {
+                  var led = 0;
+                  leds.forEach(function (status) {
+                     create_led_button(led, status);
+                     led += 1;
+                  });
+               },
+               function (e) {
+                  console.log(e);
+               }
+            );
+
+
+
+            var buttonNodes = [];
+            var buttonsNode = document.getElementById("btns");
+            buttonsNode.innerHTML = '';
+
+            function on_digin_changed_change (args, kwargs) {
+               if (buttonNodes[kwargs.button]) {
+                  if (kwargs.pressed) {
+                     buttonNodes[kwargs.button].className = "btn_button_pressed";
+                  } else {
+                     buttonNodes[kwargs.button].className = "btn_button_unpressed";
+                  }
+               }
+            }
+
+            session.subscribe("io.crossbar.examples.iot.devices.pi." + device + ".gpio.on_digin_changed", on_digin_changed_change).then(
+               function () {
+                  console.log("ok, subcribed to event 'on_digin_changed'")
+               },
+               function (e) {
+                  console.log(e);
+               }
+            );
+
+            function create_button (button, pressed) {
+               console.log(button, pressed);
+               var btn = document.createElement("span");
+               btn.innerHTML = "Push Button " + button;
+               if (pressed) {
+                  btn.className = "btn_button_pressed";
+               } else {
+                  btn.className = "btn_button_unpressed";
+               }
+               buttonsNode.appendChild(btn);
+               buttonNodes.push(btn);
+            }
+
+            session.call("io.crossbar.examples.iot.devices.pi." + device + ".gpio.get_digin").then(
+               function (buttons) {
+                  var button = 0;
+                  buttons.forEach(function (pressed) {
+                     create_button(button, pressed);
+                     button += 1;
+                  });
+               },
+               function (e) {
+                  console.log(e);
+               }
+            );
          };
 
-
-         // fired when connection was lost (or could not be established)
-         //
          connection.onclose = function (reason, details) {
-            console.log("Connection lost: " + reason);
-            if (t1) {
-               clearInterval(t1);
-               t1 = null;
-            }
-            if (t2) {
-               clearInterval(t2);
-               t2 = null;
-            }
+            console.log("Connection lost: " + reason, details);
          }
-
-
-         // now actually open the connection
-         //
          connection.open();
-
       </script>
    </body>
 </html>
