--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <a id="forward">Forward</a>
+      <a id="forward" href="#">Forward</a>
       <h1>MR.Robot</h1>
       <script>AUTOBAHN_DEBUG = true;</script>
       <script src="http://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
