--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
       
       <h1>MR.Robot</h1>
       <script>AUTOBAHN_DEBUG = true;</script>
-      <script src="http://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
+      <script src="/libs/autobahn.min.jgz"></script>
 
       <script>
          // the URL of the WAMP Router (Crossbar.io)
